--- a/UE_Client/Config/DefaultEngine.ini
+++ b/UE_Client/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/DevMap.DevMap
+EditorStartupMap=/Game/Maps/DevMap.DevMap
+GameInstanceClass=/Script/UE_Client.ClientGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
