--- a/IocpServer/AppServer/AppServer.vcxproj
+++ b/IocpServer/AppServer/AppServer.vcxproj
@@ -172,6 +172,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="AppServer.cpp" />
+    <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="PacketSession.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -179,14 +180,19 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Room.cpp" />
     <ClCompile Include="ServerPacketHandler.cpp" />
     <ClCompile Include="ServerService.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ServerCore\Protocol.pb.h" />
     <ClInclude Include="..\ServerCore\Struct.pb.h" />
+    <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="PacketSession.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Room.h" />
     <ClInclude Include="ServerPacketHandler.h" />
     <ClInclude Include="ServerService.h" />
   </ItemGroup>
