--- a/IocpServer/AppServer/AppServer.vcxproj.filters
+++ b/IocpServer/AppServer/AppServer.vcxproj.filters
@@ -21,6 +21,9 @@
     <Filter Include="소스 파일\Packet\Protobuf">
       <UniqueIdentifier>{6ecbfbcd-d674-4426-9e2d-4d4d4738a3c3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Game">
+      <UniqueIdentifier>{0669a008-7cce-4581-aed4-4e0cf95650f6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -44,6 +47,15 @@
     <ClCompile Include="..\ServerCore\Struct.pb.cc">
       <Filter>소스 파일\Packet\Protobuf</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>소스 파일\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Room.cpp">
+      <Filter>소스 파일\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectManager.cpp">
+      <Filter>소스 파일\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -63,6 +75,15 @@
     </ClInclude>
     <ClInclude Include="..\ServerCore\Struct.pb.h">
       <Filter>소스 파일\Packet\Protobuf</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>소스 파일\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Room.h">
+      <Filter>소스 파일\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectManager.h">
+      <Filter>소스 파일\Game</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
