--- a/UE_Client/Config/DefaultEngine.ini
+++ b/UE_Client/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/DevMap.DevMap
-EditorStartupMap=/Game/Maps/DevMap.DevMap
-GameInstanceClass=/Script/UE_Client.ClientGameInstance
+GameDefaultMap=/Game/Maps/DevMap2.DevMap2
+EditorStartupMap=/Game/Maps/DevMap2.DevMap2
+GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
