--- a/IocpServer/AppServer/AppServer.vcxproj
+++ b/IocpServer/AppServer/AppServer.vcxproj
@@ -159,6 +159,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\ServerCore\Enum.pb.cc">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\ServerCore\Protocol.pb.cc">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
@@ -186,6 +192,7 @@
     <ClCompile Include="ServerService.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\ServerCore\Enum.pb.h" />
     <ClInclude Include="..\ServerCore\Protocol.pb.h" />
     <ClInclude Include="..\ServerCore\Struct.pb.h" />
     <ClInclude Include="ObjectManager.h" />
