--- a/IocpServer/AppServer/AppServer.vcxproj
+++ b/IocpServer/AppServer/AppServer.vcxproj
@@ -178,6 +178,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="AppServer.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="PacketSession.cpp" />
     <ClCompile Include="pch.cpp">
@@ -195,6 +196,7 @@
     <ClInclude Include="..\ServerCore\Enum.pb.h" />
     <ClInclude Include="..\ServerCore\Protocol.pb.h" />
     <ClInclude Include="..\ServerCore\Struct.pb.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="PacketSession.h" />
     <ClInclude Include="pch.h" />
