--- a/IocpServer/ServerCore/ServerCore.vcxproj
+++ b/IocpServer/ServerCore/ServerCore.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="IocpObject.h" />
     <ClInclude Include="Job.h" />
     <ClInclude Include="JobQueue.h" />
+    <ClInclude Include="JobTimer.h" />
     <ClInclude Include="Listener.h" />
     <ClInclude Include="LockQueue.h" />
     <ClInclude Include="NetAddress.h" />
@@ -214,6 +215,7 @@
     <ClCompile Include="IocpObject.cpp" />
     <ClCompile Include="Job.cpp" />
     <ClCompile Include="JobQueue.cpp" />
+    <ClCompile Include="JobTimer.cpp" />
     <ClCompile Include="Listener.cpp" />
     <ClCompile Include="LockQueue.cpp" />
     <ClCompile Include="NetAddress.cpp" />
