--- a/IocpServer/ServerCore/ServerCore.vcxproj.filters
+++ b/IocpServer/ServerCore/ServerCore.vcxproj.filters
@@ -62,9 +62,6 @@
     <ClCompile Include="IocpEvent.cpp">
       <Filter>소스 파일\Network\Iocp</Filter>
     </ClCompile>
-    <ClCompile Include="PacketHandler.cpp">
-      <Filter>소스 파일\Network\Packet</Filter>
-    </ClCompile>
     <ClCompile Include="Service.cpp">
       <Filter>소스 파일\Network</Filter>
     </ClCompile>
@@ -94,6 +91,9 @@
     </ClCompile>
     <ClCompile Include="SendBuffer.cpp">
       <Filter>소스 파일\Network\Buffer</Filter>
+    </ClCompile>
+    <ClCompile Include="PacketManager.cpp">
+      <Filter>소스 파일\Network\Packet</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -127,9 +127,6 @@
     <ClInclude Include="IocpEvent.h">
       <Filter>소스 파일\Network\Iocp</Filter>
     </ClInclude>
-    <ClInclude Include="PacketHandler.h">
-      <Filter>소스 파일\Network\Packet</Filter>
-    </ClInclude>
     <ClInclude Include="Service.h">
       <Filter>소스 파일\Network</Filter>
     </ClInclude>
@@ -159,6 +156,9 @@
     </ClInclude>
     <ClInclude Include="SendBuffer.h">
       <Filter>소스 파일\Network\Buffer</Filter>
+    </ClInclude>
+    <ClInclude Include="PacketManager.h">
+      <Filter>소스 파일\Network\Packet</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
