--- a/IocpServer/ServerCore/ServerCore.vcxproj
+++ b/IocpServer/ServerCore/ServerCore.vcxproj
@@ -198,7 +198,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="RecvBuffer.h" />
     <ClInclude Include="SendBuffer.h" />
-    <ClInclude Include="Service.h" />
+    <ClInclude Include="NetworkService.h" />
     <ClInclude Include="Session.h" />
     <ClInclude Include="SocketUtils.h" />
     <ClInclude Include="ThreadManager.h" />
@@ -226,7 +226,7 @@
     </ClCompile>
     <ClCompile Include="RecvBuffer.cpp" />
     <ClCompile Include="SendBuffer.cpp" />
-    <ClCompile Include="Service.cpp" />
+    <ClCompile Include="NetworkService.cpp" />
     <ClCompile Include="Session.cpp" />
     <ClCompile Include="SocketUtils.cpp" />
     <ClCompile Include="ThreadManager.cpp" />
